[package]
name = "consensus-simulator"
version = "0.1.0"
edition = "2018"

[[bin]]
path = "src/bin/example.rs"
name = "example"
required-features = ["tenderbake"]

[dependencies]
rand = { version = "0.8", optional = true }
crypto = { tag = "v1.6.8", git = "https://github.com/tezedge/tezedge", optional = true }
tezos_messages = { tag = "v1.6.8", git = "https://github.com/tezedge/tezedge", optional = true }
tezos_encoding = { tag = "v1.6.8", git = "https://github.com/tezedge/tezedge", optional = true }
lazy_static = { version = "1.4", optional = true }
serde = { version = "1.0", optional = true }

[features]
default = ["tenderbake"]
tenderbake = ["rand", "crypto", "tezos_messages", "tezos_encoding", "lazy_static", "serde"]
